Realizada conversão do fonte em Javascript para typescript para se beneficiar das vantagens de Tipagem e utilização de biblioteca de controle de rotas. Acionada Documentação Swagger openapi v3.0.1
Signed-off-by: mauricio.sff <mauricio.sff@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
-.DS_Store
 node_modules
-resources
-.vscode/launch.json
+dist
+logs
+coverage
+.settings
+
 
 # local env files
 .env
 .env.local
 .env.*.local
+*.error
 
 # Log files
 npm-debug.log*
@@ -15,6 +18,8 @@ yarn-error.log*
 
 # Editor directories and files
 .idea
+.project
+.classpath
 *.suo
 *.ntvs*
 *.njsproj
