--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,22 @@
 {
-  "env": {
-      "browser": true,
-      "commonjs": true,
-      "es6": true,
-      "node": true
-  },
-  "extends": [
-      "airbnb-base"
-  ],
-  "globals": {
-      "Atomics": "readonly",
-      "SharedArrayBuffer": "readonly"
-  },
-  "parserOptions": {
-      "ecmaVersion": 2018
-  },
-  "rules": {
-      "max-len": 0,
-      "no-plusplus":"off",
-      "global-require":"off",
-      "no-underscore-dangle":"off",
-      "no-param-reassign":"off",
-      "no-console":"off"
-  }
+	"env": {
+		"es2020": true,
+		"node": true,
+		"jest": true
+	},
+	"extends": [
+		"standard"
+	],
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaVersion": 11,
+		"sourceType": "module"
+	},
+	"plugins": [
+		"@typescript-eslint"
+	],
+	"rules": {
+		"no-unused-vars": "off",
+		"@typescript-eslint/no-unused-vars": ["error", {"args": "after-used", "argsIgnorePattern": "^_"}]
+	}
 }
