--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "api-ms-vuttr",
   "version": "1.0.0",
   "description": "VUTTR Application Backend",
-  "main": "/src/server.js",
+  "main": "dist/Main.js",
   "scripts": {
-    "start": "set NODE_ENV=production && node ./src/server.js",
-    "dev": "nodemon ./src/server.js",
-    "herokuDeploy": "node ./src/server.js",
-    "lint": "eslint ./src --fix "
+    "dev": "set NODE_ENV=development && ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/Main.ts",
+    "start": "set NODE_ENV=production && node dist/Main.js",
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored ",
+    "test": "set NODE_ENV=test && jest",
+    "test:coverage": "set NODE_ENV=test && jest --coverage",
+    "lint": "eslint . --ext .ts,.js --fix"
   },
   "repository": {
     "type": "git",
@@ -20,17 +22,51 @@
   },
   "homepage": "https://github.com/maurisff/api-ms-vuttr#readme",
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.19",
+    "@types/multer": "^1.4.5",
+    "@types/node": "^14.14.14",
+    "@types/semver": "^7.3.4",
+    "@types/shelljs": "^0.8.8",
+    "@types/swagger-ui-express": "^4.1.2",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-parameter-decorator": "^1.0.16",
     "eslint": "^7.15.0",
-    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
-    "nodemon": "^2.0.6"
-  },
-  "engines": {
-    "node": "12.14.1",
-    "npm": "6.13.4"
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "husky": "^4.3.6",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "ts-node-dev": "^1.1.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.9",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/method-override": "0.0.31",
+    "@types/morgan": "^1.9.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chalk": "^4.1.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -40,11 +76,26 @@
     "helmet": "^4.2.0",
     "is-directory": "^0.3.1",
     "jsonwebtoken": "^8.5.1",
-    "md5": "^2.3.0",
+    "log4js": "^6.3.0",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
     "mongoose": "^5.11.8",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.9.0-alpha.6",
+    "semver": "^7.3.4",
+    "shelljs": "^0.8.4",
+    "swagger-ui-express": "^4.1.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  },
+  "engines": {
+    "node": "12.14.1",
+    "npm": "6.13.4"
   }
 }
