--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "set NODE_ENV=development && ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/Main.ts",
     "start": "set NODE_ENV=production && node dist/Main.js",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored ",
-    "test": "set NODE_ENV=test && jest",
-    "test:coverage": "set NODE_ENV=test && jest --coverage",
+    "test": "set NODE_ENV=test && jest --runInBand --detectOpenHandles",
+    "test:coverage": "set NODE_ENV=test && jest --runInBand --detectOpenHandles --coverage",
     "lint": "eslint . --ext .ts,.js --fix"
   },
   "repository": {
@@ -32,11 +32,14 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.9",
+    "@types/factory-girl": "^5.0.2",
+    "@types/faker": "^5.1.5",
     "@types/jest": "^26.0.19",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.14",
     "@types/semver": "^7.3.4",
     "@types/shelljs": "^0.8.8",
+    "@types/supertest": "^2.0.10",
     "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
@@ -48,8 +51,11 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^5.0.0",
+    "factory-girl": "^5.0.4",
+    "faker": "^5.1.0",
     "husky": "^4.3.6",
     "jest": "^26.6.3",
+    "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0",
@@ -91,7 +97,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "npm run lint && npm run test"
     }
   },
   "engines": {
