Add actions for github
Signed-off-by: mauricio.sff <mauricio.sff@gmail.com>

--- a/.github/workflows/TestCI.yml
+++ b/.github/workflows/TestCI.yml
@@ -5,12 +5,12 @@ name: TestCI
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-    push:
-      branch:
-        - 'develop'
-        - 'main'
-        - 'hotfix/*'
-        - 'support/*'
+  push:
+    branches:
+      - 'develop'
+      - 'main'
+      - 'hotfix/*'
+      - 'support/*'
         
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
