--- a/.github/workflows/TestCI.yml
+++ b/.github/workflows/TestCI.yml
@@ -8,16 +8,15 @@ on:
   push:
     branches:
       - 'develop'
-      - 'main'
       - 'hotfix/*'
       - 'support/*'
         
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  Build:
+  Test:
     # The type of runner that the job will run on
-    name: Test Production
+    name: Test code development
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
