--- a/.github/workflows/TestCoverageCI.yml
+++ b/.github/workflows/TestCoverageCI.yml
@@ -3,10 +3,10 @@ on:
   push:
     branches:
       - 'main'
-        
+      
 jobs:
-  Build:
-    name: Test Production
+  Test:
+    name: Test coverage Production
     runs-on: ubuntu-latest
     steps:
       - name: Dump env
