--- a/.github/workflows/TestCI.yml
+++ b/.github/workflows/TestCI.yml
@@ -20,27 +20,21 @@ jobs:
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Dump env
-        run: env | sort
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      #- uses: actions/checkout@v2
-      #- name: Get Node_Modules cache directory
-      #  id: npm-cache
-      #  run: |
-      #    echo "::set-output name=dir::$(npm config get cache)"
-      #- uses: actions/cache@v2
-      #  with:
-      #    path: ${{ steps.npm-cache.outputs.dir }}
-      #    key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-      #    restore-keys: |
-      #      ${{ runner.os }}-node-
-      #- name: upgrade npm
-      #  run: npm install -g npm
-      #- name: Install dependencies
-      #  run: npm install
-      #- name: Run test
-      #  run: npm run test
+      - uses: actions/checkout@v2
+      - name: Get Node_Modules cache directory
+        id: npm-cache
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+      - uses: actions/cache@v2
+        with:
+          path: ${{ steps.npm-cache.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: upgrade npm
+        run: npm install -g npm
+      - name: Install dependencies
+        run: npm install
+      - name: Run test
+        run: npm run test
