Ajuste para teste no github actions
Signed-off-by: mauricio.sff <mauricio.sff@gmail.com>

--- a/.github/workflows/TestCI.yml
+++ b/.github/workflows/TestCI.yml
@@ -35,4 +35,8 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Run test
+        env:
+          NODE_ENV: test
+          JWT_SECRET: test
+          MONGO_DB: ${{ secrets.MONGO_DB_TEST }}
         run: npm run test
