Ajuste para teste no github actions
Signed-off-by: mauricio.sff <mauricio.sff@gmail.com>

--- a/.github/workflows/TestCoverageCI.yml
+++ b/.github/workflows/TestCoverageCI.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - 'main'
-      
+
 jobs:
   Test:
     name: Test coverage Production
@@ -16,6 +16,10 @@ jobs:
           GITHUB_CONTEXT: ${{ toJson(github) }}
         run: echo "$GITHUB_CONTEXT"
       #- uses: actions/checkout@v2
+      #- name: Use Node.js 12.14.1
+      #  uses: actions/setup-node@v1
+      #  with:
+      #    node-version: 12.14.1
       #- name: Get Node_Modules cache directory
       #  id: npm-cache
       #  run: |
