--- a/.github/workflows/TestCI.yml
+++ b/.github/workflows/TestCI.yml
@@ -22,6 +22,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - name: Use Node.js 12.14.1
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.14.1
       - name: Get Node_Modules cache directory
         id: npm-cache
         run: |
