--- a/.github/workflows/HerokuCD.yml
+++ b/.github/workflows/HerokuCD.yml
@@ -3,9 +3,9 @@ name: Deploy api to Heroku
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  release:
-    types: [published]
+  push:
+    branches:
+      - 'main'
         
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -26,6 +26,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Show release Version
         run: echo ${{ github.event.release.tag_name }}
+      - name: Show Last tag version
+        run: echo "Last Tag => $(git describe --abbrev=0)"
       #- name: Get Node_Modules cache directory
       #  id: npm-cache
       #  run: |
