--- a/.github/workflows/DockerHubCD.yml
+++ b/.github/workflows/DockerHubCD.yml
@@ -2,59 +2,50 @@
 
 name: Push Image DockerHub
 
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-    push:
-      tags:
-        - '*'
-        
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  push:
+    tags:
+      - '*'
+
 jobs:
-  # This workflow contains a single job called "build"
   Build:
-    # The type of runner that the job will run on
-    name: Test, Build and Deploy to Production
+    name: Test, Build and push Docker Image
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Dump env
-        run: env | sort
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - name: Set output
         id: vars
         run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
-      - name: Show Tag Version
-        run: echo ${{ steps.vars.outputs.tag }}
-      - name: Show Tag Version
-        run: echo ${{ steps.vars.outputs.tag }}
-      #- name: Get Node_Modules cache directory
-      #  id: npm-cache
-      #  run: |
-      #    echo "::set-output name=dir::$(npm config get cache)"
-      #- uses: actions/cache@v2
-      #  with:
-      #    path: ${{ steps.npm-cache.outputs.dir }}
-      #    key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-      #    restore-keys: |
-      #      ${{ runner.os }}-node-
-      #- name: upgrade npm
-      #  run: npm install -g npm
-      #- name: Install dependencies
-      #  run: npm install
-      #- name: Run test pre build
-      #  run: npm run test
-      #- name: Run Build
-      #  run: npm run build
-      #  
-      #- name: Deploy to Heroku
-      #  uses: akhileshns/heroku-deploy@v3.8.9
-      #  with:
-      #    heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-      #    heroku_app_name: "api-ms-vuttr"
-      #    heroku_email: ${{secrets.HEROKU_EMAIL}}
+      - name: Get Node_Modules cache directory
+        id: npm-cache
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+      - uses: actions/cache@v2
+        with:
+          path: ${{ steps.npm-cache.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Install dependencies
+        run: npm install
+      - name: Run test pre build
+        run: npm run test
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: |
+            mauriciosff/api-ms-vuttr:${{ steps.vars.outputs.tag }}
+            mauriciosff/api-ms-vuttr:latest
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
