--- a/.github/workflows/DockerHubCD.yml
+++ b/.github/workflows/DockerHubCD.yml
@@ -13,6 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Use Node.js 12.14.1
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.14.1
       - name: Set output
         id: vars
         run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
